linting, added stripes-smart-components dep

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "stripesDeps": [
       "@folio/stripes-erm-components"
     ],
-    "icons": [
-    ],
+    "icons": [],
     "permissionSets": [
       {
         "permissionName": "module.ciim.enabled",
@@ -71,6 +70,7 @@
   "dependencies": {
     "@folio/react-intl-safe-html": "^2.0.0",
     "@folio/stripes-erm-components": "^4.0.0",
+    "@folio/stripes-smart-components": "^5.0.4",
     "compose-function": "^3.0.3",
     "final-form": "^4.18.5",
     "final-form-arrays": "^3.0.1",
