--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "hasSettings": true,
     "queryResource": "query",
     "okapiInterfaces": {
-      "erm": "1.0 2.0 3.0 4.0"
+      "ciim": "1.0"
     },
     "stripesDeps": [
       "@folio/stripes-erm-components"
